Add video feature

--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -31,6 +31,7 @@
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-start justify-content-start">
 					<li class="active"><a href="html">Home</a></li>
+					<li><a href="blog/videos/">Videos</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="https://open.spotify.com/album/0VJIMZm4xodT8clhLVi0bw?si=mcIqRQjkSvmPaXCvNUmj6g">Music</a></li>
 					<li><a href="indexfa">فارسی</a></li>
@@ -64,6 +65,7 @@
 				<nav class="menu_nav">
 					<ul class="d-flex flex-column align-items-start justify-content-start">
 						<li><a href="#">Home</a></li>
+						<li><a href="blog/videos/">Videos</a></li>
 						<li><a href="#">About us</a></li>
 						<li><a href="https://open.spotify.com/album/0VJIMZm4xodT8clhLVi0bw?si=mcIqRQjkSvmPaXCvNUmj6g">Music</a></li>
 						<li><a href="indexfa">فارسی</a></li>
