--- a/landingpage/templates/landingpage/indexfa.html
+++ b/landingpage/templates/landingpage/indexfa.html
@@ -33,6 +33,7 @@
                     <li class="active"><a href="#">خانه</a></li>
                     <li><a href="#">درباره</a></li>
                     <li><a href="blog">وبلاگ</a></li>
+                    <li><a href="blog/videos/">ویدئوها</a></li>
                     <li><a href="https://open.spotify.com/album/0VJIMZm4xodT8clhLVi0bw?si=mcIqRQjkSvmPaXCvNUmj6g">موسیقی</a></li>
                     <li><a href="/">English</a></li>
                 </ul>
@@ -64,6 +65,7 @@
                         <li class="active"><a href="#">خانه</a></li>
                         <li><a href="#">درباره</a></li>
                         <li><a href="blog">وبلاگ</a></li>
+                        <li><a href="blog/videos/">ویدئوها</a></li>
                         <li><a href="https://open.spotify.com/album/0VJIMZm4xodT8clhLVi0bw?si=mcIqRQjkSvmPaXCvNUmj6g">موسیقی</a></li>
                         <li><a href="/">English</a></li>
                     </ul>
