--- a/landingpage/templates/landingpage/indexfa.html
+++ b/landingpage/templates/landingpage/indexfa.html
@@ -182,7 +182,7 @@
                                             <li>
                                                 <div>
                                                     <p href="#" tabindex="0" style='text-color: white; font-size: 16px;'>
-                                                        6. روحب - سروش یغمایی و علی خدایی
+                                                        6. رهاب - سروش یغمایی و علی خدایی
                                                     </p>
                                                     <div class="song_duration">3:16</div>
                                                 </div>
